--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -121,6 +121,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
+        - ubuntu:24.04
         - ubuntu:22.04
         - ubuntu:20.04
         - debian:bullseye
